adicionei o estilo hide para esconder o conteudo antes do usuatio pesquisar e tambem o usuario pode seguir a busca com a tecla enter

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
 
 .hide{
     display: none;
+
 }
 
 .container{
@@ -23,6 +24,8 @@ body{
     padding: 2rem;
     color: #fdfdfd;
     border-radius: 1rem;
+    transform: scale(1);
+    transition: .4s;
 }
 
 
